plugins {
    id 'java'
    id 'com.palantir.git-version' version '0.13.0'
}

archivesBaseName = 'processor'
version = gitVersion()

java.toolchain.languageVersion = JavaLanguageVersion.of(8)

repositories {
    mavenCentral()
    maven { url = 'https://maven.fantabos.co' }
}

dependencies {
    implementation 'com.squareup:javapoet:1.13.0'
    implementation 'ftbsc:lll:0.3.2'
}

jar {
    archiveFileName = "${jar.archiveBaseName.get()}-${project.version.split('-')[0]}.${jar.archiveExtension.get()}"
}
